[package]
name = "sni-test"
version = "0.1.0"
license = "MIT"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", default-features = false }
rustls = "0.16"
webpki = "0.21"
anyhow = "1"
