[package]
name = "tls-client-hello"
version = "0.1.0"
license = "MIT"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0.7"
rustls = "0.16"
webpki = "0.21"

[dependencies.rocket]
version = "0.4"
default-features = false

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates"]
